--- a/index.ipynb
+++ b/index.ipynb
@@ -70,11 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "travel_month = \"January\" # \"January\""
+    "travel_month = \"January\" # \"January\"\n",
+    "travel_month"
    ]
   },
   {
@@ -86,11 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = None"
+    "number_of_weeks = None\n",
+    "number_of_weeks"
    ]
   },
   {
