Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,11 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number_of_weeks = 3 # 3"
+    "number_of_weeks = 3 # 3\n",
+    "number_of_weeks"
    ]
   },
   {
@@ -124,11 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks=5 # 5"
+    "number_of_weeks = 5 # 5\n"
    ]
   },
   {
